# NLParabe_v1

./: README.md
backend/: pyproject.toml  requirements.txt
backend/src/: AJGT.xlsx  code.py
frontend/FastAPIApp/: AppNavigator.js  app.json  package-lock.json  package.json  tsconfig.json
frontend/FastAPIApp/app/: _layout.tsx
frontend/FastAPIApp/app/(tabs)/: explore.tsx  index.tsx
frontend/FastAPIApp/app/(tabs)/screens/: HomeScreen.tsx  ResultScreen.tsx
