[tool.poetry]
name = "p2"
version = "0.1.0"
description = ""
authors = ["Yousrbekri <yousbk712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
